assets/scss/rtl/style-rtl.scss
@import "../variables";

/* ===[Start Arabic Font]=== */
@font-face {
  font-family: avenir;
  src: url(../fonts/AvenirArabic-Medium.otf);
  font-weight: 500;
}

@font-face {
  font-family: avenir;
  src: url(../fonts/AvenirArabic-Black.otf);
  font-weight: 900;
}
/* ===[End Arabic Font]=== */

/* ===[Start Global]=== */
* {
  box-sizing: border-box;
  scrollbar-color: $primary-color $light-color;
  scrollbar-width: thin;
}

*::-webkit-scrollbar {
  width: 5px;
  height: 5px;
}

*::-webkit-scrollbar-track-piece  {
    background-color: $light-color;
}

*::-webkit-scrollbar-thumb {
    height: 30px;
    background-color: $primary-color;
}

body {
  font-family: "avenir", "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
}

a {
  text-decoration: none;
}

@media only screen and (max-width: 1024px) {
	.swap-on-mobile {
		display: flex !important;
		flex-direction: column-reverse;
    padding-top: 20px;
	}
}

/* __Start Colors__ */
.primary-color {
  color: $primary-color;
}

.secondary-color {
  color: $secondary-color;
}

/* __End Colors__ */

/* __Start Titles__ */
.bonyan-title {
  font-size: 36px;
  font-weight: bold;

  @media (max-width: 576px) {
    font-size: 30px;
  }
}

/* __End Titles__ */

/* __Start Buttons__ */
button {
  outline: none;
}

.primary-btn {
  background: $secondary-color;
  color: $light-color;
  border-radius: $radius-10;
}

.reversed-primary-btn {
  background: $light-color;
  color: $secondary-color;
  border-radius: $radius-10;
}

.secondary-btn {
  background: $primary-color;
  color: $light-color;
  border-radius: $radius-10;
}

.secondary-outlined-btn {
  background: transparent;
  border: 1px solid $primary-color;
  border-radius: $radius-10;

  &.white-outline {
    border-color: $light-color;
  }
}

.primary-btn-white-bg {
  background: $light-color;
  color: $primary-color;
}

/* __End Buttons__ */

/* __Start Borders */
// Border
.no-border {
  border: none;
}

// Radius
.radius-10 {
  border-radius: 15px;
}

.radius-15 {
  border-radius: 15px;
}

.border-30 {
  border-radius: 30px;
}

/* __End Borders */

/* __Start Inputs, Selects__ */

// Auto complete style
input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
textarea:-webkit-autofill,
textarea:-webkit-autofill:hover,
textarea:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus {
  -webkit-text-fill-color: $primary-color;
}

.input-holder,
.select-holder {
  position: relative;
  display: flex;
}

input {
  padding-top: 1rem;
  padding-bottom: 1rem;
  border-radius: $radius-10;
  outline: none;
}

.select-icon {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

// Search input
.search-input-holder {
  input {
    border: 1px solid $primary-color;
    color: $primary-color;
    font-weight: bold;

    @media (max-width: 1024px) {
      width: 100%;
    }

    &::placeholder {
      color: $primary-color;
    }
  }

  svg {
    position: absolute;
    top: 50%;
    right: 1rem;
    transform: translateY(-50%);
    color: $primary-color;
    font-size: 20px;
  }
}

/* __End Inputs, Selects__ */

/* __Start Responsive Classes__ */
.as-flex {
  display: flex;
}

.as-inline-flex {
  display: inline-flex;
}

.as-block {
  display: block;
}

.hide-from-laptop-up {
  @media (max-width: 1024px) {
    display: none !important;
  }
}

.hide-from-ipad-down {
  @media (min-width: 1025px) {
    display: none !important;
  }
}

.hide-from-mobile-up {
  @media (min-width: 993px) {
    display: none;
  }
}

.hide-from-mobile-down {
  @media (max-width: 992px) {
    display: none !important;
  }
}

/* __End Responsive Classes__ */

/* __Start Lazyload Style Handler__ */
.lazyload,
.lazyloading {
  opacity: 0;
}

.lazyloaded {
  opacity: 1;
  transition: opacity 300ms;
}

/* __End Lazyload Style Handler__ */

/* __Start Custom Swiper Arrows__ */
.more-btn {
  height: 40px;
  padding: 0.25rem 1rem;
  display: flex;
  place-content: center;
  place-items: center;
  color: $primary-color;
  transition: $general-transition;
  text-transform: capitalize;

  &:hover {
    background: $primary-color;
    color: $light-color;
  }
}
/* ... */

